# fastjet

./: BUGS  ChangeLog  Doxyfile  INSTALL  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac  fastjet-config.in  test-compare.sh
doc/: Makefile.in  fastjet-doc.tex
doc/figs/: Makefile.am  Makefile.in  timings_best_3_0_1.eps
example/: 01-basic.cc  02-jetdef.cc  03-plugin.cc  04-constituents.cc  05-eplus_eminus.cc  06-area.cc  07-subtraction.cc  08-selector.cc  09-user_info.cc  10-subjets.cc  11-filter.cc  12-boosted_higgs.cc  13-boosted_top.cc  14-groomers.cc  CmdLine.hh  Makefile.am  Makefile.in  fastjet_areas.cc  fastjet_example.cc  fastjet_timing_plugins.cc  ktjet_timing.cc
example/data/: Makefile.am  Makefile.in
example/python/: 02-area.py  Makefile.in
example/root/: Makefile.in
fortran_wrapper/: Makefile.alt  Makefile.in  fastjet_fortran_example.f  fastjetfortran.cc
include/: Makefile.in
include/fastjet/: ActiveAreaSpec.hh  AreaDefinition.hh  CircularRange.hh  ClusterSequence.hh  ClusterSequence1GhostPassiveArea.hh  ClusterSequenceActiveArea.hh  ClusterSequenceActiveAreaExplicitGhosts.hh  ClusterSequenceArea.hh  ClusterSequenceAreaBase.hh  ClusterSequencePassiveArea.hh  ClusterSequenceStructure.hh  ClusterSequenceVoronoiArea.hh  ClusterSequenceWithArea.hh  CompositeJetStructure.hh  Error.hh  FunctionOfPseudoJet.hh  GhostedAreaSpec.hh  JetDefinition.hh  LimitedWarning.hh  Makefile.am  Makefile.in  NNBase.hh  NNFJN2Plain.hh  NNFJN2Tiled.hh  NNH.hh  PseudoJet.hh  PseudoJetStructureBase.hh  RangeDefinition.hh  RectangularGrid.hh  Selector.hh  SharedPtr.hh  WrappedStructure.hh  config_win.h  version.hh
include/fastjet/internal/: ClosestPair2D.hh  ClosestPair2DBase.hh  ClusterSequence_N2.icc  Dnn2piCylinder.hh  Dnn3piCylinder.hh  Dnn4piCylinder.hh  DnnPlane.hh  DynamicNearestNeighbours.hh  IsBase.hh  LazyTiling25.hh  LazyTiling9.hh  LazyTiling9Alt.hh  LazyTiling9SeparateGhosts.hh  LimitedWarning.hh  Makefile.am  Makefile.in  MinHeap.hh  SearchTree.hh  TilingExtent.hh  Triangulation.hh  Voronoi.hh  base.hh  deprecated.hh  numconsts.hh  thread_safety_helpers.hh
m4/: CGAL.m4
plugins/: Makefile.am  Makefile.in
plugins/ATLASCone/: ATLASConePlugin.cc  Makefile.am  Makefile.in
plugins/ATLASCone/fastjet/: ATLASConePlugin.hh  Makefile.in
plugins/CDFCones/: CDFJetCluPlugin.cc  CDFMidPointPlugin.cc  Makefile.am  Makefile.in
plugins/CDFCones/CDFcode/: Makefile.in
plugins/CDFCones/fastjet/: CDFJetCluPlugin.hh  CDFMidPointPlugin.hh  Makefile.in
plugins/CMSIterativeCone/: CMSIterativeConePlugin.cc  Makefile.am  Makefile.in
plugins/CMSIterativeCone/fastjet/: CMSIterativeConePlugin.hh  Makefile.in
plugins/D0RunICone/: D0RunIBaseConePlugin.cc  Makefile.am  Makefile.in
plugins/D0RunICone/fastjet/: D0RunIBaseConePlugin.hh  D0RunIConePlugin.hh  D0RunIpre96ConePlugin.hh  Makefile.in
plugins/D0RunIICone/: D0RunIIConePlugin.cc  Makefile.am  Makefile.in
plugins/D0RunIICone/fastjet/: D0RunIIConePlugin.hh  Makefile.in
plugins/EECambridge/: EECambridgePlugin.cc  Makefile.am  Makefile.in
plugins/EECambridge/fastjet/: EECambridgePlugin.hh  Makefile.in
plugins/GridJet/: GridJetPlugin.cc  Makefile.am  Makefile.in
plugins/GridJet/fastjet/: GridJetPlugin.hh  Makefile.in
plugins/Jade/: JadePlugin.cc  Makefile.am  Makefile.in
plugins/Jade/fastjet/: JadePlugin.hh  Makefile.in
plugins/NestedDefs/: Makefile.am  Makefile.in  NestedDefsPlugin.cc
plugins/NestedDefs/fastjet/: Makefile.in  NestedDefsPlugin.hh
plugins/PxCone/: Makefile.am  Makefile.in  PxConePlugin.cc
plugins/PxCone/fastjet/: Makefile.in  PxConePlugin.hh
plugins/SISCone/: Makefile.am  Makefile.in  SISConeBasePlugin.cc  SISConePlugin.cc  SISConeSphericalPlugin.cc  makefile.static
plugins/SISCone/fastjet/: Makefile.in  SISConePlugin.hh  SISConeSphericalPlugin.hh
plugins/SISCone/siscone/: ChangeLog  Doxyfile  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac
plugins/SISCone/siscone/examples/: Makefile.am  Makefile.in  main.cpp  options.cpp  options.h  sample.cpp  test.cpp  times.cpp
plugins/SISCone/siscone/examples/events/: Makefile.in
plugins/SISCone/siscone/siscone/: Makefile.am  Makefile.in  geom_2d.cpp  geom_2d.h  ranlux.cpp  siscone.cpp  siscone.h  siscone_error.cpp  siscone_error.h  split_merge.cpp  split_merge.h
plugins/SISCone/siscone/siscone/spherical/: Makefile.am  Makefile.in  geom_2d.cpp  geom_2d.h  hash.cpp  hash.h  momentum.cpp  protocones.cpp  siscone.cpp  siscone.h  split_merge.cpp  split_merge.h  vicinity.cpp
plugins/TrackJet/: Makefile.am  Makefile.in  TrackJetPlugin.cc
plugins/TrackJet/fastjet/: Makefile.in  TrackJetPlugin.hh
pyinterface/: Makefile.am  Makefile.in  fastjet.i  fastjet.py  swig_wrap.cpp
src/: AreaDefinition.cc  BasicRandom.cc  ClosestPair2D.cc  ClusterSequence.cc  ClusterSequence1GhostPassiveArea.cc  ClusterSequenceActiveArea.cc  ClusterSequenceActiveAreaExplicitGhosts.cc  ClusterSequenceArea.cc  ClusterSequenceAreaBase.cc  ClusterSequencePassiveArea.cc  ClusterSequenceStructure.cc  ClusterSequenceVoronoiArea.cc  ClusterSequence_CP2DChan.cc  ClusterSequence_Delaunay.cc  ClusterSequence_DumbN3.cc  ClusterSequence_N2.cc  ClusterSequence_TiledN2.cc  CompositeJetStructure.cc  Dnn2piCylinder.cc  Dnn3piCylinder.cc  Dnn4piCylinder.cc  DnnPlane.cc  Error.cc  FunctionOfPseudoJet.cc  GhostedAreaSpec.cc  JetDefinition.cc  LazyTiling25.cc  LazyTiling9.cc  LazyTiling9Alt.cc  LazyTiling9SeparateGhosts.cc  LimitedWarning.cc  Makefile.am  Makefile.in  MinHeap.cc  PseudoJet.cc  PseudoJetStructureBase.cc  RangeDefinition.cc  RectangularGrid.cc  Selector.cc  TilingExtent.cc  (+2 more)
tools/: BackgroundEstimatorBase.cc  CASubJetTagger.cc  Filter.cc  GridMedianBackgroundEstimator.cc  JHTopTagger.cc  JetMedianBackgroundEstimator.cc  Makefile.am  Makefile.in  MassDropTagger.cc  Pruner.cc  RestFrameNSubjettinessTagger.cc  Subtractor.cc  TopTaggerBase.cc
tools/fastjet/: Makefile.in
tools/fastjet/tools/: BackgroundEstimatorBase.hh  Boost.hh  CASubJetTagger.hh  Filter.hh  GridMedianBackgroundEstimator.hh  JHTopTagger.hh  (+9 more)
